src/app/feature/pages/ddx-kyc/ddx-kyc-personal-info/ddx-kyc-personal-info.component.scss
@import '../../../../../styles.scss';

:host {
  form {
    grid-template-rows: repeat(8, max-content) auto;
    grid-template-columns: 100%;
    grid-template-areas:
      'description'
      'firstName'
      'lastName'
      'dateOfBirth'
      'birthCountry'
      'country'
      'city'
      'zipCode'
      'addressLine1'
      'addressLine2'
      'actions';

    #firstName {
      grid-area: firstName;
    }
    #lastName {
      grid-area: lastName;
    }
    #dateOfBirth {
      grid-area: dateOfBirth;
    }
    #birthCountry {
      grid-area: birthCountry;
    }
    #zipCode {
      grid-area: zipCode;
    }
    #country {
      grid-area: country;
    }
    #city {
      grid-area: city;
    }
    #addressLine1 {
      grid-area: addressLine1;
    }
    #addressLine2 {
      grid-area: addressLine2;
    }
  }
}

@media screen and (min-width: $break-narrow-tablet) {
  :host {
    form {
      grid-template-rows: repeat(6, max-content) auto;
      grid-template-columns: 1fr 1fr;
      grid-template-areas:
        'description description'
        'firstName lastName'
        'dateOfBirth birthCountry'
        'country city'
        'addressLine1 addressLine1'
        'zipCode addressLine2'
        '. actions';
    }
  }
}

